// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorList matches snapshot 1`] = `
"<div data-v-31c8f953="" class="ipl-expanding-space color-dark">
  <div data-v-31c8f953="" class="ipl-expanding-space__header">
    <div data-v-31c8f953="" class="ipl-expanding-space__header-background" tabindex="0"></div>
    <div data-v-31c8f953="" class="ipl-expanding-space__title">translation:colorList.sectionTitle</div>
    <font-awesome-icon-stub data-v-31c8f953="" icon="[object Object]" border="false" fixedwidth="false" flip="false" listitem="false" pulse="false" swapopacity="false" spin="false" symbol="false" inverse="false" bounce="false" shake="false" beat="false" fade="false" beatfade="false" flash="false" spinpulse="false" spinreverse="false" class="icon"></font-awesome-icon-stub>
    <div data-v-31c8f953="" class="header-extra"></div>
  </div>
  <div data-v-31c8f953="" class="content" style="display: none;">
    <div class="colors-container">
      <div class="layout horizontal center-horizontal m-x-16">
        <ipl-checkbox-stub label="translation:colorList.useCustomColorCheckbox" modelvalue="false" small="true" disabled="false" data-test="use-custom-color-toggle"></ipl-checkbox-stub>
        <ipl-checkbox-stub label="translation:colorList.showColorNamesCheckbox" modelvalue="false" small="true" disabled="false" data-test="color-names-toggle" class="m-l-8"></ipl-checkbox-stub>
      </div>
      <div class="m-t-8">
        <div class="color-group">
          <ipl-button-stub color="transparent" disabled="false" async="false" progressmessage="Working..." successmessage="Done!" errormessage="Error!" requiresconfirmation="false" shortconfirmationmessage="false" small="false" disableonsuccess="false" inline="false" class="title" data-test="color-finder-opener-0"></ipl-button-stub>
          <div data-test="color-option-0-0" class="color-option layout horizontal center-vertical"><span style="flex-grow: 1; display: none;">colors:SPLATOON_3.rankedModes.orangePurple</span>
            <div class="color-previews layout horizontal">
              <div class="color-preview" style="background-color: rgb(245, 101, 34); border-color: #181e29;"></div>
              <div class="color-preview" style="background-color: rgb(130, 28, 214); border-color: white;"></div>
            </div>
          </div>
          <div data-test="color-option-0-1" class="color-option layout horizontal center-vertical"><span style="flex-grow: 1; display: none;">colors:SPLATOON_3.rankedModes.yellowDarkBlue</span>
            <div class="color-previews layout horizontal">
              <div class="color-preview" style="background-color: rgb(237, 217, 33); border-color: #181e29;"></div>
              <div class="color-preview" style="background-color: rgb(70, 30, 230); border-color: white;"></div>
            </div>
          </div>
          <div data-test="color-option-0-2" class="color-option layout horizontal center-vertical"><span style="flex-grow: 1; display: none;">colors:SPLATOON_3.rankedModes.turquoiseOrange</span>
            <div class="color-previews layout horizontal">
              <div class="color-preview" style="background-color: rgb(42, 219, 198); border-color: #181e29;"></div>
              <div class="color-preview" style="background-color: rgb(250, 90, 65); border-color: #181e29;"></div>
            </div>
          </div>
          <div data-test="color-option-0-3" class="color-option layout horizontal center-vertical"><span style="flex-grow: 1; display: none;">colors:SPLATOON_3.rankedModes.orangeDarkBlue</span>
            <div class="color-previews layout horizontal">
              <div class="color-preview" style="background-color: rgb(252, 119, 53); border-color: #181e29;"></div>
              <div class="color-preview" style="background-color: rgb(64, 72, 219); border-color: white;"></div>
            </div>
          </div>
          <div data-test="color-option-0-4" class="color-option layout horizontal center-vertical"><span style="flex-grow: 1; display: none;">colors:SPLATOON_3.rankedModes.turquoisePink</span>
            <div class="color-previews layout horizontal">
              <div class="color-preview" style="background-color: rgb(42, 219, 195); border-color: #181e29;"></div>
              <div class="color-preview" style="background-color: rgb(227, 73, 132); border-color: white;"></div>
            </div>
          </div>
          <div data-test="color-option-0-5" class="color-option layout horizontal center-vertical"><span style="flex-grow: 1; display: none;">colors:SPLATOON_3.rankedModes.darkBlueOrange</span>
            <div class="color-previews layout horizontal">
              <div class="color-preview" style="background-color: rgb(44, 44, 219); border-color: white;"></div>
              <div class="color-preview" style="background-color: rgb(242, 156, 51); border-color: #181e29;"></div>
            </div>
          </div>
          <div data-test="color-option-0-6" class="color-option layout horizontal center-vertical"><span style="flex-grow: 1; display: none;">colors:SPLATOON_3.rankedModes.yellowPurple</span>
            <div class="color-previews layout horizontal">
              <div class="color-preview" style="background-color: rgb(238, 252, 88); border-color: #181e29;"></div>
              <div class="color-preview" style="background-color: rgb(118, 53, 240); border-color: white;"></div>
            </div>
          </div>
          <div data-test="color-option-0-7" class="color-option layout horizontal center-vertical"><span style="flex-grow: 1; display: none;">colors:SPLATOON_3.rankedModes.goldPurple</span>
            <div class="color-previews layout horizontal">
              <div class="color-preview" style="background-color: rgb(235, 204, 49); border-color: #181e29;"></div>
              <div class="color-preview" style="background-color: rgb(160, 50, 219); border-color: white;"></div>
            </div>
          </div>
          <div data-test="color-option-0-8" class="color-option layout horizontal center-vertical"><span style="flex-grow: 1; display: none;">colors:SPLATOON_3.rankedModes.greenPink</span>
            <div class="color-previews layout horizontal">
              <div class="color-preview" style="background-color: rgb(179, 222, 69); border-color: #181e29;"></div>
              <div class="color-preview" style="background-color: rgb(212, 59, 202); border-color: white;"></div>
            </div>
          </div>
          <div data-test="color-option-0-9" class="color-option layout horizontal center-vertical"><span style="flex-grow: 1; display: none;">colors:SPLATOON_3.rankedModes.pinkGreen</span>
            <div class="color-previews layout horizontal">
              <div class="color-preview" style="background-color: rgb(247, 83, 161); border-color: #181e29;"></div>
              <div class="color-preview" style="background-color: rgb(53, 204, 45); border-color: #181e29;"></div>
            </div>
          </div>
        </div>
        <div class="color-group">
          <div class="title">colors:SPLATOON_3.colorLock1.groupName</div>
          <div data-test="color-option-1-0" class="color-option layout horizontal center-vertical"><span style="flex-grow: 1; display: none;">colors:SPLATOON_3.colorLock1.purpleYellow</span>
            <div class="color-previews layout horizontal">
              <div class="color-preview" style="background-color: rgb(98, 54, 223); border-color: white;"></div>
              <div class="color-preview" style="background-color: rgb(240, 235, 36); border-color: #181e29;"></div>
            </div>
          </div>
        </div>
        <div class="color-group">
          <div class="title">colors:SPLATOON_3.colorLock2.groupName</div>
          <div data-test="color-option-2-0" class="color-option layout horizontal center-vertical"><span style="flex-grow: 1; display: none;">colors:SPLATOON_3.colorLock2.blueOrange</span>
            <div class="color-previews layout horizontal">
              <div class="color-preview" style="background-color: rgb(45, 99, 215); border-color: white;"></div>
              <div class="color-preview" style="background-color: rgb(253, 182, 5); border-color: #181e29;"></div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`ColorList matches snapshot when color names are shown 1`] = `
"<div data-v-31c8f953="" class="ipl-expanding-space color-dark">
  <div data-v-31c8f953="" class="ipl-expanding-space__header">
    <div data-v-31c8f953="" class="ipl-expanding-space__header-background" tabindex="0"></div>
    <div data-v-31c8f953="" class="ipl-expanding-space__title">translation:colorList.sectionTitle</div>
    <font-awesome-icon-stub data-v-31c8f953="" icon="[object Object]" border="false" fixedwidth="false" flip="false" listitem="false" pulse="false" swapopacity="false" spin="false" symbol="false" inverse="false" bounce="false" shake="false" beat="false" fade="false" beatfade="false" flash="false" spinpulse="false" spinreverse="false" class="icon"></font-awesome-icon-stub>
    <div data-v-31c8f953="" class="header-extra"></div>
  </div>
  <div data-v-31c8f953="" class="content" style="display: none;">
    <div class="colors-container">
      <div class="layout horizontal center-horizontal m-x-16">
        <ipl-checkbox-stub label="translation:colorList.useCustomColorCheckbox" modelvalue="false" small="true" disabled="false" data-test="use-custom-color-toggle"></ipl-checkbox-stub>
        <ipl-checkbox-stub label="translation:colorList.showColorNamesCheckbox" modelvalue="true" small="true" disabled="false" data-test="color-names-toggle" class="m-l-8"></ipl-checkbox-stub>
      </div>
      <div class="m-t-8">
        <div class="color-group color-names-visible">
          <ipl-button-stub color="transparent" disabled="false" async="false" progressmessage="Working..." successmessage="Done!" errormessage="Error!" requiresconfirmation="false" shortconfirmationmessage="false" small="false" disableonsuccess="false" inline="false" class="title" data-test="color-finder-opener-0"></ipl-button-stub>
          <div data-test="color-option-0-0" class="color-option layout horizontal center-vertical"><span style="flex-grow: 1;">colors:SPLATOON_3.rankedModes.orangePurple</span>
            <div class="color-previews layout horizontal">
              <div class="color-preview" style="background-color: rgb(245, 101, 34); border-color: #181e29;"></div>
              <div class="color-preview" style="background-color: rgb(130, 28, 214); border-color: white;"></div>
            </div>
          </div>
          <div data-test="color-option-0-1" class="color-option layout horizontal center-vertical"><span style="flex-grow: 1;">colors:SPLATOON_3.rankedModes.yellowDarkBlue</span>
            <div class="color-previews layout horizontal">
              <div class="color-preview" style="background-color: rgb(237, 217, 33); border-color: #181e29;"></div>
              <div class="color-preview" style="background-color: rgb(70, 30, 230); border-color: white;"></div>
            </div>
          </div>
          <div data-test="color-option-0-2" class="color-option layout horizontal center-vertical"><span style="flex-grow: 1;">colors:SPLATOON_3.rankedModes.turquoiseOrange</span>
            <div class="color-previews layout horizontal">
              <div class="color-preview" style="background-color: rgb(42, 219, 198); border-color: #181e29;"></div>
              <div class="color-preview" style="background-color: rgb(250, 90, 65); border-color: #181e29;"></div>
            </div>
          </div>
          <div data-test="color-option-0-3" class="color-option layout horizontal center-vertical"><span style="flex-grow: 1;">colors:SPLATOON_3.rankedModes.orangeDarkBlue</span>
            <div class="color-previews layout horizontal">
              <div class="color-preview" style="background-color: rgb(252, 119, 53); border-color: #181e29;"></div>
              <div class="color-preview" style="background-color: rgb(64, 72, 219); border-color: white;"></div>
            </div>
          </div>
          <div data-test="color-option-0-4" class="color-option layout horizontal center-vertical"><span style="flex-grow: 1;">colors:SPLATOON_3.rankedModes.turquoisePink</span>
            <div class="color-previews layout horizontal">
              <div class="color-preview" style="background-color: rgb(42, 219, 195); border-color: #181e29;"></div>
              <div class="color-preview" style="background-color: rgb(227, 73, 132); border-color: white;"></div>
            </div>
          </div>
          <div data-test="color-option-0-5" class="color-option layout horizontal center-vertical"><span style="flex-grow: 1;">colors:SPLATOON_3.rankedModes.darkBlueOrange</span>
            <div class="color-previews layout horizontal">
              <div class="color-preview" style="background-color: rgb(44, 44, 219); border-color: white;"></div>
              <div class="color-preview" style="background-color: rgb(242, 156, 51); border-color: #181e29;"></div>
            </div>
          </div>
          <div data-test="color-option-0-6" class="color-option layout horizontal center-vertical"><span style="flex-grow: 1;">colors:SPLATOON_3.rankedModes.yellowPurple</span>
            <div class="color-previews layout horizontal">
              <div class="color-preview" style="background-color: rgb(238, 252, 88); border-color: #181e29;"></div>
              <div class="color-preview" style="background-color: rgb(118, 53, 240); border-color: white;"></div>
            </div>
          </div>
          <div data-test="color-option-0-7" class="color-option layout horizontal center-vertical"><span style="flex-grow: 1;">colors:SPLATOON_3.rankedModes.goldPurple</span>
            <div class="color-previews layout horizontal">
              <div class="color-preview" style="background-color: rgb(235, 204, 49); border-color: #181e29;"></div>
              <div class="color-preview" style="background-color: rgb(160, 50, 219); border-color: white;"></div>
            </div>
          </div>
          <div data-test="color-option-0-8" class="color-option layout horizontal center-vertical"><span style="flex-grow: 1;">colors:SPLATOON_3.rankedModes.greenPink</span>
            <div class="color-previews layout horizontal">
              <div class="color-preview" style="background-color: rgb(179, 222, 69); border-color: #181e29;"></div>
              <div class="color-preview" style="background-color: rgb(212, 59, 202); border-color: white;"></div>
            </div>
          </div>
          <div data-test="color-option-0-9" class="color-option layout horizontal center-vertical"><span style="flex-grow: 1;">colors:SPLATOON_3.rankedModes.pinkGreen</span>
            <div class="color-previews layout horizontal">
              <div class="color-preview" style="background-color: rgb(247, 83, 161); border-color: #181e29;"></div>
              <div class="color-preview" style="background-color: rgb(53, 204, 45); border-color: #181e29;"></div>
            </div>
          </div>
        </div>
        <div class="color-group color-names-visible">
          <div class="title">colors:SPLATOON_3.colorLock1.groupName</div>
          <div data-test="color-option-1-0" class="color-option layout horizontal center-vertical"><span style="flex-grow: 1;">colors:SPLATOON_3.colorLock1.purpleYellow</span>
            <div class="color-previews layout horizontal">
              <div class="color-preview" style="background-color: rgb(98, 54, 223); border-color: white;"></div>
              <div class="color-preview" style="background-color: rgb(240, 235, 36); border-color: #181e29;"></div>
            </div>
          </div>
        </div>
        <div class="color-group color-names-visible">
          <div class="title">colors:SPLATOON_3.colorLock2.groupName</div>
          <div data-test="color-option-2-0" class="color-option layout horizontal center-vertical"><span style="flex-grow: 1;">colors:SPLATOON_3.colorLock2.blueOrange</span>
            <div class="color-previews layout horizontal">
              <div class="color-preview" style="background-color: rgb(45, 99, 215); border-color: white;"></div>
              <div class="color-preview" style="background-color: rgb(253, 182, 5); border-color: #181e29;"></div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`ColorList matches snapshot when using custom color 1`] = `
"<div data-v-31c8f953="" class="ipl-expanding-space color-dark">
  <div data-v-31c8f953="" class="ipl-expanding-space__header">
    <div data-v-31c8f953="" class="ipl-expanding-space__header-background" tabindex="0"></div>
    <div data-v-31c8f953="" class="ipl-expanding-space__title">translation:colorList.sectionTitle</div>
    <font-awesome-icon-stub data-v-31c8f953="" icon="[object Object]" border="false" fixedwidth="false" flip="false" listitem="false" pulse="false" swapopacity="false" spin="false" symbol="false" inverse="false" bounce="false" shake="false" beat="false" fade="false" beatfade="false" flash="false" spinpulse="false" spinreverse="false" class="icon"></font-awesome-icon-stub>
    <div data-v-31c8f953="" class="header-extra"></div>
  </div>
  <div data-v-31c8f953="" class="content" style="display: none;">
    <div class="colors-container">
      <div class="layout horizontal center-horizontal m-x-16">
        <ipl-checkbox-stub label="translation:colorList.useCustomColorCheckbox" modelvalue="true" small="true" disabled="false" data-test="use-custom-color-toggle"></ipl-checkbox-stub>
        <ipl-checkbox-stub label="translation:colorList.showColorNamesCheckbox" modelvalue="false" small="true" disabled="false" data-test="color-names-toggle" class="m-l-8"></ipl-checkbox-stub>
      </div>
      <!--v-if-->
    </div>
    <div>
      <div class="layout horizontal m-t-8">
        <ipl-input-stub name="team-a-color" modelvalue="#889" type="color" centered="false" disabled="false" loading="false" theme="default" style="flex-grow: 1;"></ipl-input-stub>
        <ipl-input-stub name="team-b-color" modelvalue="#999" type="color" centered="false" disabled="false" loading="false" theme="default" class="m-l-8" style="flex-grow: 1;"></ipl-input-stub>
      </div>
      <ipl-button-stub label="common:button.update" color="blue" disabled="false" async="false" progressmessage="Working..." successmessage="Done!" errormessage="Error!" requiresconfirmation="false" shortconfirmationmessage="false" small="false" disableonsuccess="false" inline="false" class="m-t-8" title="common:button.rightClickUndoMessage" data-test="custom-color-submit-btn"></ipl-button-stub>
    </div>
  </div>
</div>"
`;
